bdr.BDR.scala.error
Erreur de compilation :
BDR:16: error: not found: value fini
                     fini = true
                     ^