bdr.BDR.scala.code

baisseBrosse()
while (estSurMessage()) {if (litMessage() == "R") {droite()}
                     else if (litMessage() == "L") {gauche()
                                                   avance()}
                     else if (litMessage() == "L") {gauche()
                                                   avance()}
                     else if (litMessage() == "I") {retourne()
                                                   avance()}
                     else if (litMessage() == "A") {avance(1)}
                     else if (litMessage() == "L") {avance(2)}
                     else if (litMessage() == "C") {avance(3)}
                     else if (litMessage() == "Z") {recule(1)}
                      else if (litMessage() == "Y") {recule(2)}
                     else if (litMessage() == "X") {recule(3)}
                     fini = true
                     }